deployment.yaml
kind: Deployment 
apiVersion: apps/v1 
metadata: 
  name: nginx-balancer 
  namespace: <YOUR_NAMESPACE>
  labels: 
    app: nginx-balancer 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: nginx-balancer 
  template: 
    metadata: 
      labels: 
        app: nginx-balancer 
    spec: 
      volumes: 
      - name: config-servers 
        configMap: 
          name: server-block-map 
          defaultMode: 484 
      containers: 
        - resources: 
            limits: 
              cpu: 100m 
              memory: 250Mi 
            requests: 
              cpu: 50m 
              memory: 50Mi 
          readinessProbe: 
            tcpSocket: 
              port: 8080 
            initialDelaySeconds: 20 
            timeoutSeconds: 5 
            periodSeconds: 10 
            successThreshold: 2 
            failureThreshold: 3 
          livenessProbe: 
            httpGet: 
              path: / 
              port: 8080 
              scheme: HTTP 
            initialDelaySeconds: 20 
            timeoutSeconds: 5 
            periodSeconds: 10 
            successThreshold: 1 
            failureThreshold: 5 
          name: nginx-balancer 
          ports: 
            - name: 8443tcp84432 
              containerPort: 8443 
              protocol: TCP 
            - name: 8080tcp8080 
              containerPort: 8080 
              protocol: TCP 
          imagePullPolicy: Always 
          image: 'bitnami/nginx:1.19' 
          volumeMounts: 
            - name: config-servers 
              mountPath: /opt/bitnami/nginx/conf/server_blocks           
      restartPolicy: Always
