service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: <YOUR_NAMESPACE>
  labels:
    app: nginx
spec:
  ports:
    - name: 8080tcp8080
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: nginx-balancer
